# cloudvis_ros

./: CMakeLists.txt  package.xml  test.tiff
cfg/: services.yaml
examples/: test.py
examples/ggcnn/: ggcnn.py  pcd0101d.tiff  pcd0102d.tiff  pcd0103d.tiff  pcd0104d.tiff  pcd0105d.tiff
examples/yolo/: yolo.py
msg/: Property.msg
scripts/: cloudvis  cloudvis_ggcnn  cloudvis_yolo
srv/: Get.srv  GraspPoint.srv
