<?xml version="1.0"?>
<package format="2">
  <name>cloudvis</name>
  <version>0.0.0</version>
  <description>The cloudvis package</description>

  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qut_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>qut_msgs</exec_depend>

  <export>
  </export>
</package>
